fix: add link on dropdown.css into htmls; fix: add anchor into search.html

--- a/Django/CSUProjects/templates/pages/cinema.html
+++ b/Django/CSUProjects/templates/pages/cinema.html
@@ -13,7 +13,9 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js' defer></script>
     <script  src={% static "/src/JScripts/toast.js" %} defer></script>
     <script  src={% static "/src/JScripts/cinemaCarousel.js" %} defer></script>
-        <script type="text/javascript" src={% static "/src/JScripts/themeToggle.js" %} defer></script>
+    <script type="text/javascript" src={% static "/src/JScripts/themeToggle.js" %} defer></script>
+
+    <link rel="stylesheet" href={% static "/css/dropdown.css" %}>
     
 {% endblock cssAndScripts %}
 
