--- a/Django/CSUProjects/templates/pages/completedProjects.html
+++ b/Django/CSUProjects/templates/pages/completedProjects.html
@@ -9,6 +9,8 @@
     <script type="text/javascript" src={% static "/src/JScripts/themeToggle.js" %} defer></script>
     <script type="text/javascript" src= {% static "/src/JScripts/gen_word_engine.js" %} defer> </script>
 
+    <link rel="stylesheet" href={% static "/css/dropdown.css" %}>
+
 {% endblock cssAndScripts %}
 
 {% block content %}
