--- a/Django/CSUProjects/templates/pages/subProjects.html
+++ b/Django/CSUProjects/templates/pages/subProjects.html
@@ -12,7 +12,7 @@
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js" defer></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js" defer></script>
 
-
+    <link rel="stylesheet" href={% static "/css/dropdown.css" %}>
     
 {% endblock cssAndScripts %}
 
