--- a/Django/CSUProjects/templates/components/search.html
+++ b/Django/CSUProjects/templates/components/search.html
@@ -1,5 +1,5 @@
 <div class="container my-5 bg-light-primary border border-2 rounded-4 g-0 p-3 shadow">
-    <form id="search" action={% url 'search' %} method="get" target="_self">
+    <form id="search" action={% url 'search' %}#projects method="get" target="_self">
         <div class="form-floating d-flex rounded-start" role="search">
             <input id="search-field" name="search" class="form-control border-0 shadow-none" type="search"  placeholder="Поиск проекта" aria-label="Search">
             <input id="page-field" name="page-query" type="hidden"  value="{{page}}">
