--- a/Django/CSUProjects/templates/pages/subProjects.html
+++ b/Django/CSUProjects/templates/pages/subProjects.html
@@ -100,57 +100,6 @@
     </section>
 
 <!-- Modal window -->
-    <div class="modal fade" id="invite-prj" tabindex="-1" aria-labelledby="label-invite-prj" aria-hidden="true" style="backdrop-filter: blur(10px)">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header vstack border-0">
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    <h1 class="modal-title fs-3" id="label-invite-prj">Записаться на проект</h1>
-                </div>
-                <form method="post">
-                    {% csrf_token %}
-                    <div class="modal-body">
-                        <div class="form-floating mb-4">
-                            <input name="name" type="text" class="form-control border-0 border-bottom rounded-0 shadow-none" id="floatingName" placeholder="Имя">
-                            <label for="floatingName">Имя</label>
-                        </div>
-                        <div class="form-floating mb-4">
-                            <input name="second_name" type="text" class="form-control border-0 border-bottom rounded-0 shadow-none" id="floatingSecondName" placeholder="Фамилия">
-                            <label for="floatingSecondName">Фамилия</label>
-                        </div>
-                        <div class="form-floating mb-4">
-                            <input name="group" type="text" class="form-control border-0 border-bottom rounded-0 shadow-none" id="floatingGroup" placeholder="Группа">
-                            <label for="floatingGroup">Группа</label>
-                        </div>
-                        <div class="form-floating mb-4">
-                            <input name="email" type="email" class="form-control border-0 border-bottom rounded-0 shadow-none" id="floatingEmail" placeholder="Email">
-                            <label for="floatingEmail">Email</label>
-                        </div>
-                        <div class="form-floating">
-                            <select name="subporject_name" class="form-select mb-4" id="floatingSubproject" aria-label="select">
-                                <option selected>-----------------------</option>
-                                {% for card in cards %}
-                                <option value="{{vacancy.vid}}">{{card.title}}</option>
-                                {% endfor %}
-                            </select>
-                            <label for="floatingSubproject">Выберете интересующий вас подпроект</label>
-                        </div>
-                        <div class="form-floating mb-4">
-                            <input name="vacancy" type="text" class="form-control border-0 border-bottom rounded-0 shadow-none" id="floatingVacancy" placeholder="Вакансия">
-                            <label for="floatingVacancy">Введите интересующую вас вакансию</label>
-                        </div>
-                        <div class="form-floating mb-4">
-                            <textarea name="description" class="form-control border-0 border-bottom rounded-0 shadow-none" id="floatingDescription" rows="3" col="4" placeholder="О себе" aria-describedby="descriptionHelp"></textarea>
-                            <label for="floatingDescription" class="form-label">О себе</label>
-                            <div id="descriptionHelp" class="form-text">Расскажите нам немного о себе</div>
-                        </div>
-                    </div>
-                    <div class="modal-footer justify-content-center border-0">
-                        <button type="submit" class="btn btn-outline-danger rounded-3 col fw-semibold">Записаться</button>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
+    {% include "components/form.html"%}
 
 {% endblock content %}
