--- a/Django/CSUProjects/templates/components/csuLogoMini.html
+++ b/Django/CSUProjects/templates/components/csuLogoMini.html
@@ -13,7 +13,7 @@
 
         //Требуемые переменные и константы
         let logo = null,                                              //Хранилище логотипа
-            canvas = document.querySelector(".logo");                //Канвас со спиралью
+            canvas = document.querySelector(".logo");
 
         const sizes = {
             width: canvas.offsetHeight / 0.8,
