--- a/Django/CSUProjects/templates/pages/index.html
+++ b/Django/CSUProjects/templates/pages/index.html
@@ -31,8 +31,8 @@
 
     <section id="about us">
         <div class="bg-body-secondary py-3">
-            <h1 class="fs-1 mb-3 ps-3">О нас</h1>
-            <p class="text-body-secondary fs-5 px-3">Виртуальное пространство, где инновации и знания сливаются в единое целое! Наш хостинг - это результат коллективных усилий университета, предоставляющий инфраструктуру для запуска и поддержки разнообразных проектов, подпроектов и исследовательских инициатив.Мы предоставляем пространство и ресурсы для развертывания разнообразных проектов, от исследовательских и учебных до инновационных и творческих инициатив.
+            <h1 class="fs-1 mb-3 ps-4">О нас</h1>
+            <p class="text-body-secondary fs-5 px-4">Виртуальное пространство, где инновации и знания сливаются в единое целое! Наш хостинг - это результат коллективных усилий университета, предоставляющий инфраструктуру для запуска и поддержки разнообразных проектов, подпроектов и исследовательских инициатив.Мы предоставляем пространство и ресурсы для развертывания разнообразных проектов, от исследовательских и учебных до инновационных и творческих инициатив.
         </div>
         <div class="shape-container shape-line shape-position-bottom bg-body-secondary">
             <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="100%" height="10%" preserveAspectRatio="xMidYMid meet">
@@ -97,15 +97,11 @@
     </section>
 
     <section id="projects">
-        <h1 class="fs-1 ps-3">Проекты</h1>
+        <h1 class="fs-1 ps-4">Проекты</h1>
         {% include "components/search.html" %}
 
         <div class="container">
-            {% if cards.number != 1 %}
-                <div class="grid mt-4">
-            {% else %}
-                <div class="grid mt-4">
-            {% endif %}
+            <div class="grid mt-4">
             <div class="row gy-5 gx-0 justify-content-between align-items-center">{% include "components/cardProjects.html" %}</div>
                 
             </div>
@@ -155,7 +151,7 @@
                 </g>
             </svg>
         </div>
-        <div class="container-fluid bg-body-secondary ps-3">
+        <div class="container-fluid bg-body-secondary ps-4">
             <h1 class="fs-1">Единство Творческих Умов</h1>
             <div class="container-fluid">
                 <div class="row justify-content-around">
@@ -177,7 +173,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 d-md-block d-none">
-                        <img src={% static "/img/idea.png" %} width="80%" height="80%" alt="">
+                        <img src={% static "/img/hamster-lamp-2.png" %} width="80%" height="80%" alt="">
                     </div>
                 </div>
             </div>
