--- a/Django/CSUProjects/templates/pages/completedProjects.html
+++ b/Django/CSUProjects/templates/pages/completedProjects.html
@@ -37,7 +37,7 @@
         <h1 class="fs-1 p-2 ps-4">Проекты</h1>
         <div class="container">
             <div class="grid mt-4 mb-5">
-                <div class="row gy-5 gx-0 justify-content-between align-items-center">{% include "components/cardProjects.html" %}</div>
+                <div class="row gy-5 gx-0 justify-content-lg-between justify-content-center align-items-center">{% include "components/cardProjects.html" %}</div>
             </div>
 
             <div id="not-found" class="visually-hidden text-center fw-semibold fs-4 py-5">
