--- a/App/CSUProjects/templates/components/cardProjects.html
+++ b/App/CSUProjects/templates/components/cardProjects.html
@@ -9,8 +9,8 @@
                     <img class="rounded-start-4 img-fluid h-100" style="max-height: 240px; object-fit: cover; min-width: 115px;" src={% static "/img/logo-photo.jpg" %}>
                 {% endif %}
             </div>
-            <div class="col-8 px-4">
-                <div class="card-body w-100 h-100">
+            <div class="col-8 px-3">
+                <div class="card-body w-100 h-100 pe-0">
                     <span class="d-flex badge justify-content-end">
                         {% if card.status == 'full' %}
                             <div class="position-absolute d-flex top-0 translate-middle-y px-1 py-1 rounded-pill border-1 text-bg-success">
@@ -53,10 +53,18 @@
                         {% endif %}
                     </span>
                     <h5 class="card-title text-center fs-5 text-danger">{{card.title|capfirst}}</h5>
-                    <p class="card-text d-lg-block d-none fs-6 fw-semibold">{{card.description|truncatechars:140}}</p>
-                    <p class="card-text d-lg-none d-block fs-6 fw-semibold">{{card.description|truncatechars:60}}</p>
+                    <p class="card-text d-lg-block d-none w-100 fs-6 mb-1 fw-semibold">{{card.description|truncatechars:120}}</p>
+                    <p class="card-text d-lg-none d-block w-100 fs-6 mb-1 fw-semibold">{{card.description|truncatechars:35}}</p>
 
                     {% if page == 'completedProjects' %}
+                        <div class="position-absolute sticky-bottom mb-1 end-0 d-flex align-items-end">
+                            <p class="card-text fw-semibold fs-6 me-2 text-danger">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+                                    <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+                                </svg>
+                                {{card.rating}}/5
+                            </p>
+                        </div>
                         <a href="cinema/{{card.pid}}" class="stretched-link"></a>
                     {% else %}
                         <a href="subProjects/{{card.pid}}" class="stretched-link"></a>
