fix: max_values into projects, adaptability into cards, cinema, subProjects

--- a/App/CSUProjects/templates/components/cardProjects.html
+++ b/App/CSUProjects/templates/components/cardProjects.html
@@ -52,7 +52,7 @@
                             </div>
                         {% endif %}
                     </span>
-                    <h5 class="card-title text-center fs-5 text-danger">{{card.title|capfirst}}</h5>
+                    <h5 class="card-title text-center fs-5 text-danger pe-3">{{card.title|capfirst}}</h5>
                     <p class="card-text d-lg-block d-none w-100 fs-6 mb-1 fw-semibold">{{card.description|truncatechars:120}}</p>
                     <p class="card-text d-lg-none d-block w-100 fs-6 mb-1 fw-semibold">{{card.description|truncatechars:35}}</p>
 
