--- a/App/CSUProjects/templates/pages/subProjects.html
+++ b/App/CSUProjects/templates/pages/subProjects.html
@@ -18,7 +18,7 @@
 
     <section id="about-project">
         <div class="bg-body-secondary p-3">
-            <div class="position-absolute end-0 pe-4">
+            <div class="position-absolute end-0 pe-lg-4">
                 <a href={% url 'main' %}#projects class="btn btn-outline-danger border-0">
                     <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-box-arrow-left" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M6 12.5a.5.5 0 0 0 .5.5h8a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 0-.5-.5h-8a.5.5 0 0 0-.5.5v2a.5.5 0 0 1-1 0v-2A1.5 1.5 0 0 1 6.5 2h8A1.5 1.5 0 0 1 16 3.5v9a1.5 1.5 0 0 1-1.5 1.5h-8A1.5 1.5 0 0 1 5 12.5v-2a.5.5 0 0 1 1 0z"/>
@@ -26,7 +26,7 @@
                     </svg>
                 </a>
             </div>
-            <h1 class="fs-1 mb-3">{{project.title|capfirst}}</h1>
+            <h1 class="fs-1 mb-3 pe-5">{{project.title|capfirst}}</h1>
             <p class="text-body-secondary fs-5 px-5 fw-semibold">{{project.description|capfirst}}</p>
         </div>
         <div class="shape-container shape-line shape-position-bottom bg-body-secondary">
