added notifications for form

--- a/App/CSUProjects/templates/pages/index.html
+++ b/App/CSUProjects/templates/pages/index.html
@@ -19,7 +19,6 @@
 {% endblock cssAndScripts %}
 
 {% block content %}
-
 	<section id="preview">
 		<div class="container-fluid row-2 text-center bg-body-tertiary">
             <canvas id="vortex" class="img-fluid" width="800" height="300">
@@ -216,4 +215,5 @@
 
 <!-- Modal window -->
 {% include "components/form.html"%}
+{% include "components/notification.html" %}
 {% endblock content %}
