--- a/App/CSUProjects/templates/pages/subProjects.html
+++ b/App/CSUProjects/templates/pages/subProjects.html
@@ -98,6 +98,6 @@
     </section>
 
 <!-- Modal window -->
-    {% include "components/form.html"%}
-
+{% include "components/form.html"%}
+{% include "components/notification.html" %}
 {% endblock content %}
