--- a/App/CSUProjects/templates/components/form.html
+++ b/App/CSUProjects/templates/components/form.html
@@ -5,7 +5,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 <h1 class="modal-title fs-3" id="label-invite-prj">{{form.title}}</h1>
             </div>
-            <form action={% url 'sendLetter' %} method="post" target="_blank">
+            <form action={% url 'api_post_form' %} method="post">
                 {% csrf_token %}
                 <input id="page-field" name="page-query" type="hidden"  value="{{page}}">
                 <div class="modal-body">
