--- a/App/CSUProjects/templates/pages/completedProjects.html
+++ b/App/CSUProjects/templates/pages/completedProjects.html
@@ -20,7 +20,7 @@
         </div>
         <div class="shape-container shape-line shape-position-bottom bg-body-secondary">
             <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="100%" height="10%" preserveAspectRatio="xMidYMid meet">
-                <g transform="translate(0.000000,200.000000) scale(1.000000,-0.1400000)" fill="white" class="svgObj">
+                <g transform="translate(0.000000,200.000000) scale(1.3000000,-0.1400000)" fill="white" class="svgObj">
                     <path d="M0 695 l0 -695 1000 0 1000 0 0 536 c0 323 -4 533 -9 530 -13 -8
                     -162 -51 -246 -71 -152 -36 -237 -47 -396 -52 -346 -12 -538 32 -811 184 -84
                     47 -126 75 -253 169 -78 58 -170 94 -240 94 l-45 0 0 -695z"/>
