--- a/App/CSUProjects/templates/pages/index.html
+++ b/App/CSUProjects/templates/pages/index.html
@@ -34,7 +34,7 @@
         </div>
         <div class="shape-container shape-line shape-position-bottom bg-body-secondary">
             <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="100%" height="10%" preserveAspectRatio="xMidYMid meet">
-                <g transform="translate(0.000000,150.000000) scale(1.000000,-0.100000)" fill="white" class="svgObj">
+                <g transform="translate(0.000000,150.000000) scale(1.3000000,-0.100000)" fill="white" class="svgObj">
                     <path d="M1915 1509 c-151 -35 -317 -106 -521 -222 -364 -206 -608 -307 -884
                     -363 -142 -29 -328 -38 -452 -21 l-58 7 0 -455 0 -455 1000 0 1000 0 0 760 0
                     760 -22 -1 c-13 -1 -41 -5 -63 -10z"/>
@@ -141,7 +141,7 @@
     <section id="metrics">
         <div class="shape shape-bottom shape-fluid-x text-gray-200">
             <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="100%" height="10%" preserveAspectRatio="xMidYMid meet" class="bg-body-secondary">
-                <g transform="translate(0.000000,175.000000) scale(1.000000,-0.100000)" fill="white" class="svgObj">
+                <g transform="translate(0.000000,175.000000) scale(1.3000000,-0.100000)" fill="white" class="svgObj">
                     <path d="M0 1610 l0 -389 63 -51 c79 -64 118 -83 242 -116 164 -44 405 -37
                     600 18 89 24 260 91 349 135 168 84 366 149 526 172 41 6 108 19 148 28 l72
                     17 0 288 0 288 -1000 0 -1000 0 0 -390z"/>
