--- a/App/CSUProjects/templates/pages/subProjects.html
+++ b/App/CSUProjects/templates/pages/subProjects.html
@@ -31,7 +31,7 @@
         </div>
         <div class="shape-container shape-line shape-position-bottom bg-body-secondary">
             <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="100%" height="10%" preserveAspectRatio="xMidYMid meet">
-                <g transform="translate(-5.000000,200.000000) scale(1.000000,-0.1300000)" fill="white" class="svgObj">
+                <g transform="translate(-5.000000,200.000000) scale(1.3000000,-0.1300000)" fill="white" class="svgObj">
                     <path d="M0 725 l0 -725 1000 0 1000 0 0 645 c0 355 -3 645 -7 645 -3 0 -55
                     -23 -114 -50 -128 -59 -203 -74 -491 -92 -203 -13 -397 -3 -547 28 -118 25
                     -426 127 -533 178 -54 25 -102 46 -108 46 -5 0 -49 11 -96 25 -47 14 -90 25
