--- a/App/CSUProjects/templates/components/search.html
+++ b/App/CSUProjects/templates/components/search.html
@@ -1,5 +1,5 @@
 <div class="container my-5 bg-light-primary border border-2 rounded-4 g-0 p-3 shadow">
-    <form id="search" action={% url 'search' %}#projects method="get">
+    <form id="search" action={% url 'api_search' %}#projects method="get">
         {% csrf_token %}
         <div class="form-floating d-flex rounded-start" role="search">
             <input id="search-field" name="search" class="form-control border-0 shadow-none" type="search"  placeholder="Поиск проекта" aria-label="Search">
