--- a/App/CSUProjects/templates/components/cardProjects.html
+++ b/App/CSUProjects/templates/components/cardProjects.html
@@ -3,11 +3,7 @@
     <div class="card shadow-lg col-sm-5 rounded-4 border-2 bg-body-tertiary" style="max-height: 240px; min-width: 250px;">
         <div class="row">
             <div class="col-4">
-                {% if card.mediaExists %}
-                    <img class="rounded-start-4 img-fluid h-100" style="max-height: 240px; object-fit: cover; min-width: 115px;" src= {{card.photo.url}}>
-                {% else %}
-                    <img class="rounded-start-4 img-fluid h-100" style="max-height: 240px; object-fit: cover; min-width: 115px;" src={% static "/img/logo-photo.jpg" %}>
-                {% endif %}
+                <img class="rounded-start-4 img-fluid h-100" style="max-height: 240px; object-fit: cover; min-width: 115px;" src="{{card.get_preview}}">
             </div>
             <div class="col-8 px-3">
                 <div class="card-body w-100 h-100 pe-0">
