--- a/App/CSUProjects/templates/components/notification.html
+++ b/App/CSUProjects/templates/components/notification.html
@@ -2,7 +2,7 @@
 
 <div id="notify" class="toast position-fixed bottom-0 end-0 translate-middle-y me-xl-4 me-2 z-3 text-bg-{{ notify.status }}" role="alert" aria-live="assertive" aria-atomic="true">
     <div class="d-flex justify-content-center fs-6 fw-semibold">
-        <div class="toast-body"> <strong>{{ notify.type }}</strong>:   {{ notify.body }} </div>
+        <div class="toast-body"> <strong>{{ notify.type }}</strong>:&nbsp&nbsp&nbsp{{ notify.body }} </div>
     </div>
 </div>
 
