--- a/App/CSUProjects/templates/pages/cinema.html
+++ b/App/CSUProjects/templates/pages/cinema.html
@@ -41,9 +41,8 @@
                     {% endif %}
                     
                     <div class="card-body">
-                        <h3 class="text-danger-subtle h2"> {{card.wid.name}} <br />
+                        <h3 class="text-danger-subtle h2"> {{card.wid.name}}</h3>
                         <h5 class="text-body-secondary fs-4"> {{card.post}} </h5>
-                        </h3>
                         <p class="card-text text-start fw-normal fs-5 py-3">{{card.description}}</p>
                     </div>
                 </div>
