del: useless imgs fix: index, cardProjects.html

--- a/App/CSUProjects/templates/pages/index.html
+++ b/App/CSUProjects/templates/pages/index.html
@@ -168,7 +168,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 d-md-block d-none">
-                        <img src={% static "/img/hamster-lamp-2.png" %} width="80%" height="80%" alt="">
+                        <img src={% static "/img/hamster-lamp.png" %} width="80%" height="80%" alt="">
                     </div>
                 </div>
             </div>
